--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,6 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -24,7 +20,11 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <meta name="description" content="Welcome to Little Lemon, where we serve delicious and authentic Mediterranean cuisine in a cozy atmosphere. Join us for an unforgettable dining experience!">
+    <meta property="og:title" content="Little Lemon - Authentic Mediterranean Cuisine">
+    <meta property="og:description" content="Experience the best of Mediterranean flavors at Little Lemon. Enjoy fresh ingredients, delightful ambiance, and exceptional service.">
+    <meta property="og:image" content="logo.svg">
+    <title>Little Lemon</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
